# orchestration

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.md.bak  DEVLOG.md  LICENSE  README.md  pyproject.toml
.claude/agents/: code-review-agent.md
.claude/rules/: python.md  react.md  sql.md  testing.md  typescript.md
.github/workflows/: ci.yml
docs/: COMMANDS.md  README.md  TEMPLATES.md
project-documents/user/: .gitkeep
project-documents/user/architecture/: 050-arch.hld-orchestration.md  (+5 more)
scripts/: update-guides
src/orchestration/: __init__.py  config.py  logging.py
src/squadron/: __init__.py  logging.py
tests/: conftest.py  test_config.py  test_logging.py  test_models.py  test_providers.py  test_smoke.py
tests/cli/: conftest.py  test_auth.py  test_help.py  test_history.py  test_integration.py  test_list.py  test_message.py  test_models.py  test_serve.py  test_shutdown.py  test_spawn.py  test_spawn_autoloader.py  test_spawn_base_url.py  test_spawn_profile.py  test_task.py  test_version.py
tests/client/: test_http.py
tests/config/: conftest.py  test_cli_config.py  test_manager.py
tests/core/: test_agent_registry.py
tests/providers/: test_auth.py  test_auth_resolution.py  test_profiles.py
tests/review/: conftest.py  test_builtin_arch.py  test_builtin_code.py  test_builtin_tasks.py  test_cli_review.py  test_config_cwd.py  test_model_resolution.py  test_models.py  test_parsers.py  test_rules.py  test_runner.py  test_templates.py  test_verbosity.py
tests/server/: conftest.py  test_daemon.py  test_engine.py  test_integration.py  test_routes.py
(+146 files in other folders)
